<resources>
    <string name="overview_title">Overview</string>
    <string name="income_list">Income List</string>
    <string name="debt_list">Debt List</string>
    <string name="debt_detail">Debt Detail</string>
    <string name="income_detail">Income Detail</string>
    <string name="expense_list">Expense List</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="category_setting">Category Setting</string>
    <string name="category_detail">Category Detail</string>
    <string name="app_name">Money Manager</string>
    <string name="welcome">Hello, Welcome Back \n Money Manager</string>
    <string name="intro">Money Manger let you record all your income and expenses.So you will not get broke</string>
    <string name="record">Start Now</string>
    <string name="currency">MYR</string>
    <string name="amount_hint">Amount</string>
    <string name="choose_category">Choose Category</string>
    <string name="note_hint">note</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_income">Income</string>
    <string name="title_expenses">Expenses</string>
    <string name="new_Income">New Income</string>
    <string name="new_expense">New Expense</string>
    <string name="breakdown">Breakdown</string>
    <string name="expenses_detail">Expenses Detail</string>
    <string name="category">Category</string>
    <string name="new_category">New Category</string>
    <string name="category_hint">Category Name</string>
    <string name="category_type">Choose Category Type</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="take_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="delete_category">Delete Item</string>
    <string name="date_picker_title">Date:</string>
    <string name="time_picker_title">Time:</string>
    <string name="dialog_expense_photo">Add Expense Photo</string>
    <string name="take_photo_title">Take a photo for expense</string>
    <string name="jump_to_first">Jump to first</string>
    <string name="jump_to_last">Jump to last</string>
    <string name="income_empty_text">There Is No Income Record</string>
    <string name="expense_empty_text">There Is No Expense Record</string>
    <string name="overview_empty_text">There Is No Transaction Yet</string>
    <string name="debt_empty_text">Nobody owe you money.</string>
    <string name="new_debt">New Debt</string>
    <string name="show_balance">Show Balance</string>
    <string name="hide_balance">Hide Balance</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <plurals name="expense_subtitle_plural">
        <item quantity="one">%1$d expense</item>
        <item quantity="other">%1$d expenses</item>
    </plurals>
    <plurals name="income_subtitle_plural">
        <item quantity="one">%1$d income</item>
        <item quantity="other">%1$d incomes</item>
    </plurals>
    <plurals name="debt_subtitle_plural">
        <item quantity="one">%1$d debt</item>
        <item quantity="other">%1$d debts</item>
    </plurals>

    <string name="Title">TITLE</string>
    <string name="title_hint">Enter a title for the debt.</string>
    <string name="details">DETAILS</string>
    <string name="description_hint">Enter description for the debt.</string>
    <string name="return_money">Return</string>
    <string name="choose_debtor">CHOOSE DEBTOR</string>
    <string name="send_message">SEND DEBTOR DEBT MESSAGE</string>
    <string name="call_debtor">CALL DEBTOR</string>

    <string name="debt_report">%1$s! The debt was owe on %2$s. %3$s, and %4$s
</string>
    <string name="debt_report_returned">The debt is cleared</string>
    <string name="debt_report_not_returned">The case is not cleared</string>
    <string name="debt_report_no_debtor">there is no debtor.</string>
    <string name="debt_report_debtor">the debtor is %s.</string>
    <string name="crime_report_subject">Money Manager Debt Report</string>
    <string name="send_report">Send debt report via</string>

</resources>
